--- a/carsHtml/X5.html
+++ b/carsHtml/X5.html
@@ -4,11 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style/styles.css">
+    <link rel="stylesheet" href="../stylemedia/responsive.css">
     <link rel="icon" type="image/x-icon" href="../favicon/logo.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>BMW X5</title>
 </head>
 <body class="bodycars">
+
+  <div class="navigationResponsive">
+    <div class="hamburger-menu" onclick="toggleMenu(event)">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+      </div>
+  
+      <div id="nav-links" class="nav-links">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="services.html">Services</a>
+        <a href="contact.html">Contact</a>
+        <a href="moreproducts.html">Products</a>
+        <button class="btnLogin-popup">Login</button>
+      </div>
+</div>
 
   <header>
     <img class="logo" src="../img/logo.png">
@@ -112,6 +130,23 @@
         behavior: 'smooth',
     });
 });
+  </script>
+  <script>
+            function toggleMenu(event) {
+        event.stopPropagation();
+  
+        const navLinks = document.getElementById('nav-links');
+        navLinks.classList.toggle('active');
+    }
+  
+    document.addEventListener('click', function(event) {
+        const navLinks = document.getElementById('nav-links');
+        const hamburgerMenu = document.querySelector('.hamburger-menu');
+  
+        if (!hamburgerMenu.contains(event.target) && !navLinks.contains(event.target)) {
+        navLinks.classList.remove('active');
+        }
+    });
   </script>
 </body>
 </html>
