--- a/moreproducts.html
+++ b/moreproducts.html
@@ -36,97 +36,12 @@
                 <label for="file-upload" class="file-label">Choose a file</label>
                 <input type="file" id="file-upload" name="file-upload" accept=".jpg, .jpeg, .png" multiple>
                 <p id="file-name">No file chosen</p>
-                <button id="carButton" onclick="addCard()">create an announcement <i class="bi bi-file-plus" id="create-icon"></i></button>
+                <button id="carButton">create an announcement <i class="bi bi-file-plus" id="create-icon"></i></button>
             </ul>
         </div>
 
     <script src="./src/script.js"></script>
     <script>
-
-        const ContainerProducts = document.querySelector('.containerproducts');
-        const addCardBtn = document.getElementById('сarButton');
-
-        const fileInput = document.getElementById('file-upload');
-        const fileName = document.getElementById('file-name');
-
-        fileInput.addEventListener('change', () => {
-            if (fileInput.files.length > 0) {
-                fileName.textContent = fileInput.files[0].name;
-            } else {
-                fileName.textContent = 'No file chosen';
-            }
-        });
-
-        function addCard() {
-            const model = document.getElementById('data-model').value;
-            const horsepower = document.getElementById('data-horse').value;
-            const price = document.getElementById('data-price').value;
-            const year = document.getElementById('data-year').value;
-
-            if (!model || !horsepower || !price || !year ) {
-                alert('Please, fill in all fields.');
-                return;
-            }
-
-            const newCard = createCard({ model, horsepower, price, year,});
-            ContainerProducts.appendChild(newCard);
-
-            saveCardsToLocalStorage();
-        }
-
-        function createCard(cardData) {
-            const card = document.createElement('div');
-            card.classList.add('cardproducts');
-
-            card.innerHTML = `
-                <div class="container-img-products">
-                    <img class="ImgCar" src="">
-                </div>
-                <i id="delete-icon" class="bi bi-x-lg"></i>
-                <ul>
-                    <li><i class="bi bi-box-fill"></i><h5>Model : <p class="ModelOfCar">${cardData.model}</p></h5></li>
-                    <li><img src="./img/iconHP.png" class="iconimg"><h5>Horsepower : <p class="Horsepower">${cardData.horsepower}</p></h5></li>
-                    <li><i class="bi bi-basket"></i><h5>Price : <p class="Price">${cardData.price}</p></h5></li>
-                    <li><i class="bi bi-clock-history"></i><h5>Year : <p class="Year">${cardData.year}</p></h5></li>
-                </ul>
-            `;
-
-            const deleteIcon = card.querySelector('#delete-icon');
-            deleteIcon.addEventListener('click', () => {
-                ContainerProducts.removeChild(card);
-                saveCardsToLocalStorage();
-            });
-
-            return card;
-        }
-
-        function saveCardsToLocalStorage() {
-            const cards = [];
-            const cardElements = ContainerProducts.querySelectorAll('.cardproducts');
-
-            cardElements.forEach(card => {
-                const cardData = {
-                    model: card.querySelector('.ModelOfCar').innerText,
-                    horsepower: card.querySelector('.Horsepower').innerText,
-                    price: card.querySelector('.Price').innerText,
-                    year: card.querySelector('.Year').innerText
-                };
-                cards.push(cardData);
-            });
-
-            localStorage.setItem('cards', JSON.stringify(cards));
-        }
-
-        function loadCardsFromLocalStorage() {
-            const savedCards = localStorage.getItem('cards');
-            if (savedCards) {
-                const cardsData = JSON.parse(savedCards);
-                cardsData.forEach(cardData => {
-                    const newCard = createCard(cardData);
-                    ContainerProducts.appendChild(newCard);
-                });
-            }
-        }
 
         const cardofcar = document.querySelectorAll('.cardproducts');
 
@@ -140,10 +55,6 @@
                 }
             });
         });
-
-        window.onload = loadCardsFromLocalStorage;
-
-        addCardBtn.addEventListener('click', addCard);
     </script>
 </body>
 </html>
